# project_428

./: .gitignore  COSC428_project_test.ipynb  Dockerfile  README.md  dataset_utils.py  dataset_viewer.py  demo.py  pyproject.toml  settings.py
app/: main.py
app/api/v1/: images.py
app/services/: detect_faces.py  detect_vlps.py  image_context.py  obscure.py  persons.py  test_faces.py  test_vlps.py  utils.py
app/services/faces/: mediapipe.py  retinaface.py  yolov11face.py  yolov8face.py
app/services/vlps/: bhaskrr.py  morsetechlab.py
evaluation/: efficacy.py  faces_accuracy.py  pipeline_speed.py  plates_accuracy.py  speed.py  test_utils.py
test_images/: README.md
